<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_inscription"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/etNom"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_nom"
            android:inputType="textPersonName"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_mot_de_passe"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnInscrire"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/btn_inscrire"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</ScrollView>