<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:layout_marginTop="@dimen/marginTop_text"
            android:textSize="@dimen/textSize"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/marginBottom_text"/>

        <EditText
            android:id="@+id/poids"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/poids_hint"
            android:inputType="numberDecimal"
            android:autofillHints="weight"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/taille"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/taille_hint"
            android:inputType="numberDecimal"
            android:autofillHints="height"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculer"
        android:layout_below="@id/text2"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/listViewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>